# ballpark

./: .gitignore  CDR2003.ipynb  OptimumDebt.bib  README.md  binder.md  empirical.md  flymd.md  literature-gaps.md  models.md  prior-literature.md  proposed-revisions.md  pyproject.toml  subsequent-literature-analysis.md  tools.md
.specstory/history/: 2026-02-02_21-02Z-old-repository-update-assessment.md
binder/: postBuild  requirements.txt
empirical/: Results-That-Beg-For-A-Model.ipynb
empirical/Results-That-Beg-For-A-Model/dpFamilyLaborAssets/: WangTao_dpFamilyLaborAssets.ipynb
models/: Aiyagari_1994.ipynb  We-Would-Like-In-Econ-ARK-ykulu1.ipynb  We-Would-Like-In-Econ-ARK.ipynb  We-Would-Like-In-Econ-ARK.md
models/Already-Partway-In-Econ-ARK/: BayerLuettickeTwoAsset.ipynb  EX3SS_20.p
models/We-Would-Like-In-Econ-ARK/: Aiyagari.ipynb  Aiyagari1994QJE.ipynb  Aiyagari1994QJE_updated.ipynb  GMLifeCylceInvestment.ipynb  JKM_summary-Copy1.ipynb  JKM_summary.ipynb  Untitled.ipynb  WangT-AHLifeCycleExpenditure.ipynb  equation writing learning.ipynb
models/We-Would-Like-In-Econ-ARK/AHLifeCycleExpenditure/: AHLifeCycleExpenditure_summary.ipynb  WangT-AHLifeCycleExpenditure.ipynb
models/We-Would-Like-In-Econ-ARK/ARMonetaryPolicyHABC/: ARMonetaryPolicyHABC_itself.ipynb  ToramanSY_AlganRagot2009_Summary.ipynb
models/We-Would-Like-In-Econ-ARK/Accounting-for-the-U.S.-Earnings-and-Wealth-Inequality/: CDR2003.ipynb
scripts/: setup_env.sh
tools/Already-Partway-In-Econ-ARK/: GanongNoelUI.md  blSolving.md
tools/That-We-Would-Like-To-Add/: Gauss-Hermite.md
(+119 files in other folders)
